added google tag manager, fixed icon rendering

--- a/html/audiophile.html
+++ b/html/audiophile.html
@@ -2,50 +2,78 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="High quality audio from around the web."/>
-        <title>Elliott's Audio</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Audio</h1>
-                    <h2>I like high quality audio</h2>
-                    <p>You might also enjoy some of the following tracks and audio excerpts:</p>
-                    <ul>
-                        <li>The album 'Mezzanine', by Massive Attack <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a></li>
-                        <li>The album 'Blue Lines', by Massive Attack <a href="https://open.spotify.com/album/5mAPk4qeNqVLtNydaWbWlf?si=SaLt2eEORxOGqu0HLgDOsg">listen on Spotify</a></li>
-                        <li>Various tracks by Grimes, particularly from the album 'Visions' <a href="https://open.spotify.com/album/2jXthXcPiAdhatxYPv4yPk?si=vyhK_84JS7yZ3jSvHrW1BQ">listen on Spotify</a></li>
-                        <li>Supersonic (My Existence), by Skrillex, Noisia, and josh pan <a href="https://open.spotify.com/album/3KpWkFQMXb7sph4xWuHQ5m?si=etbWuHXaRim6HwK_mZLqMg">listen on Spotify</a></li>
-                        <li>The album '10,000 Days', by TOOL <a href="https://open.spotify.com/album/1fvWYcbjuycyHpzNPH1Vfk?si=ZIaZ9YSuTWy9tWKFOC-mJw">listen on Spotify</a></li>
-                        <li>The album 'Fear Inoculum', by TOOL <a href="https://open.spotify.com/album/7acEciVtnuTzmwKptkjth5?si=02935b31e0c6404b">listen on Spotify</a></li>
-                        <li>The album 'Lateralus', by TOOL <a href="https://open.spotify.com/album/5l5m1hnH4punS1GQXgEi3T?si=eb0b85f036054839">listen on Spotify</a></li>
-                        <li>The album 'Nightshade', by Hotel Pools <a href="https://open.spotify.com/album/45ac8N9BQaKuxKYv2OZhvV?si=FX6dDOiCQdmXmV_OA7Cucg">listen on Spotify</a></li>
-                        <li>The Astartes Project, by Syama Pedersen <a href="https://youtu.be/O7hgjuFfn3A"> listen on YouTube</a></li>
-                        <li>Elite: Dangerous' OST, by Erasmus Talbot <a href="https://open.spotify.com/album/7DiKsmM1Ekr9mWYxRCMjrE?si=lrgnji4KRMG6r9POxjBxUQ">listen on Spotify</a></li>
-                        <li>Radiohead's 'Pyramid Song', slowed by 800% <a href="https://youtu.be/XiKWfcy-Z70">listen on YouTube</a></li>
-                        <!-- <li><a href=""></a> link</li> -->
-                    </ul>
-                    <h2>My audio setup</h2>
-                    <ul>
-                        <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
-                        <li>Digital-to-Analogue Converter (DAC): FiiO E10k</li>
-                        <li>Casual Headphones: Bose QC35 (the old ones, not the IIs)</li>
-                        <li>In-Ear Wireless: Anker Soundcore Life Dot 2</li>
-                        <li>Monitors: KRK Rokit 5 x2</li>
-                    </ul>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="High quality audio from around the web." />
+    <title>Elliott's Audio</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Audio</h1>
+          <h2>I like high quality audio</h2>
+          <p>You might also enjoy some of the following tracks and audio excerpts:</p>
+          <ul>
+            <li>The album 'Mezzanine', by Massive Attack
+              <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a>
+            </li>
+            <li>The album 'Blue Lines', by Massive Attack
+              <a href="https://open.spotify.com/album/5mAPk4qeNqVLtNydaWbWlf?si=SaLt2eEORxOGqu0HLgDOsg">listen on Spotify</a>
+            </li>
+            <li>Various tracks by Grimes, particularly from the album 'Visions'
+              <a href="https://open.spotify.com/album/2jXthXcPiAdhatxYPv4yPk?si=vyhK_84JS7yZ3jSvHrW1BQ">listen on Spotify</a>
+            </li>
+            <li>Supersonic (My Existence), by Skrillex, Noisia, and josh pan
+              <a href="https://open.spotify.com/album/3KpWkFQMXb7sph4xWuHQ5m?si=etbWuHXaRim6HwK_mZLqMg">listen on Spotify</a>
+            </li>
+            <li>The album '10,000 Days', by TOOL
+              <a href="https://open.spotify.com/album/1fvWYcbjuycyHpzNPH1Vfk?si=ZIaZ9YSuTWy9tWKFOC-mJw">listen on Spotify</a>
+            </li>
+            <li>The album 'Fear Inoculum', by TOOL
+              <a href="https://open.spotify.com/album/7acEciVtnuTzmwKptkjth5?si=02935b31e0c6404b">listen on Spotify</a>
+            </li>
+            <li>The album 'Lateralus', by TOOL
+              <a href="https://open.spotify.com/album/5l5m1hnH4punS1GQXgEi3T?si=eb0b85f036054839">listen on Spotify</a>
+            </li>
+            <li>The album 'Nightshade', by Hotel Pools
+              <a href="https://open.spotify.com/album/45ac8N9BQaKuxKYv2OZhvV?si=FX6dDOiCQdmXmV_OA7Cucg">listen on Spotify</a>
+            </li>
+            <li>The Astartes Project, by Syama Pedersen
+              <a href="https://youtu.be/O7hgjuFfn3A">
+                listen on YouTube</a>
+            </li>
+            <li>Elite: Dangerous' OST, by Erasmus Talbot
+              <a href="https://open.spotify.com/album/7DiKsmM1Ekr9mWYxRCMjrE?si=lrgnji4KRMG6r9POxjBxUQ">listen on Spotify</a>
+            </li>
+            <li>Radiohead's 'Pyramid Song', slowed by 800%
+              <a href="https://youtu.be/XiKWfcy-Z70">listen on YouTube</a>
+            </li>
+            <!-- <li><a href=""></a> link</li> -->
+          </ul>
+          <h2>My audio setup</h2>
+          <ul>
+            <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
+            <li>Digital-to-Analogue Converter (DAC): FiiO E10k</li>
+            <li>Casual Headphones: Bose QC35 (the old ones, not the IIs)</li>
+            <li>In-Ear Wireless: Anker Soundcore Life Dot 2</li>
+            <li>Monitors: KRK Rokit 5 x2</li>
+          </ul>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
