--- a/html/chess-timer/home.html
+++ b/html/chess-timer/home.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    {% include gtm_top.html %}
     <title>Titular Text</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/chess.css">
@@ -12,6 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
+    {% include gtm_bottom.html %}
     <div id="phone_screen">
       <div class="content">
         <h1>Chess Timer</h1>
