--- a/html/contact.html
+++ b/html/contact.html
@@ -2,38 +2,47 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="../css/hal.css"/> -->
-        <meta name="description" content="Contact details for Elliott"/>
-        <title>Contact Elliott</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Contact</h1>
-                    <h2>Need to get in touch?</h2>
-                    <ul>
-                        <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
-                        <li>Github: <a href="https://github.com/elliott-huge">elliott-huge</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- <div id="hal-container">
-                <div class="circle" id="hal-outline"></div>
-                <div class="circle" id="hal-white"></div>
-                <div class="circle" id="hal-iris"></div>
-                <div class="circle" id="hal-pupil"></div>
-            </div> -->
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="../css/hal.css"/> -->
+    <meta name="description" content="Contact details for Elliott" />
+    <title>Contact Elliott</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Contact</h1>
+          <h2>Need to get in touch?</h2>
+          <ul>
+            <li>Linkedin:
+              <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a>
+            </li>
+            <li>Github:
+              <a href="https://github.com/elliott-huge">elliott-huge</a>
+            </li>
+          </ul>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+      <!-- <div id="hal-container">
+      <div class="circle" id="hal-outline"></div>
+      <div class="circle" id="hal-white"></div>
+      <div class="circle" id="hal-iris"></div>
+      <div class="circle" id="hal-pupil"></div>
+      </div> -->
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
