--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% include gtm_top.html %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../res/icon.png" />
@@ -14,12 +15,12 @@
       href="https://fonts.gstatic.com"
       crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?
-                family=Material+Symbols+Outlined:FILL" />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <meta name="description" content="Web dashboard" />
     <title>Dashboard</title>
   </head>
   <body>
+    {% include gtm_bottom.html %}
     <div id="datetime">
       <h3 id="time"></h3>
       <h3 id="date"></h3>
@@ -41,19 +42,19 @@
       <div class="panel">
         <div class="panel-content">
           <h3>
-            <span class="material-symbols-outlined">chat_bubble</span>
+            <span class="material-icons-outlined">chat_bubble_outline</span>
             <a target="_blank" href="https://www.messenger.com/">Messenger</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">travel_explore</span>
+            <span class="material-icons-outlined">travel_explore</span>
             <a target="_blank" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">mail</span>
+            <span class="material-icons-outlined">mail</span>
             <a target="_blank" href="https://mail.google.com/mail/u/0/">Gmail</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">psychology</span>
+            <span class="material-icons-outlined">psychology</span>
             <a target="_blank" href="https://chat.openai.com/chat">ChatGPT</a>
           </h3>
         </div>
@@ -69,19 +70,19 @@
       <div class="panel">
         <div class="panel-content">
           <h3>
-            <span class="material-symbols-outlined">timer</span>
+            <span class="material-icons-outlined">timer</span>
             <a target="_blank" href="https://www.google.com/search?q=15+minute+timer">15 min</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">schedule</span>
+            <span class="material-icons-outlined">schedule</span>
             <a target="_blank" href="https://www.google.com/search?q=30+minute+timer">½ an hour</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">more_time</span>
+            <span class="material-icons-outlined">more_time</span>
             <a target="_blank" href="https://www.google.com/search?q=45+minute+timer">45 minute</a>
           </h3>
           <h3>
-            <span class="material-symbols-outlined">hourglass_top</span>
+            <span class="material-icons">hourglass_top</span>
             <a target="_blank" href="https://www.google.com/search?q=60+minute+timer">1 hour</a>
           </h3>
         </div>
