--- a/html/design-dimensions.html
+++ b/html/design-dimensions.html
@@ -2,85 +2,93 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="Conceptual dimensions that underpin design"/>
-        <title>Design Dimensions</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Design Dimensions</h1>
-                    <h2>Intro'</h2>
-                    <p>
-                        Broadly speaking, a designer's function is to take information about a design problem, garner some ideas, then assess and test them until a good ideas emerge.
-                    </p>
-                    <p>
-                        Design dimensions - also known as laws, principles, perspectives and so on - are the many conceptual frameworks designers adopt when creating and assessing their ideas.
-                    </p>
-                    <p>
-                        Below are some examples, note that some of these may have overlapping content, or be broader than others:
-                    </p>
-                    <ul>
-                        <li>Usability</li>
-                        <li>Trust</li>
-                        <li>Appeal</li>
-                        <li>Convention</li>
-                        <li>Aesthetics</li>
-                        <li>Signifiers</li>
-                        <li>Physical context</li>
-                    </ul>
-                    <p>
-                        These dimensions are important: someone unaware of these would find a design problem enigmatic. You could even argue that <i>they are not a designer at all</i>.
-                    </p>
-                    <p>
-                        If a design idea were a break-board, design dimensions are both the hands that set them up, and the many fists attempting to break them. Good ideas get broken very rarely.
-                    </p>
-                    <h2>An example: Order</h2>
-                    <p>
-                        One dimension of design I recently found myself considering was <i>Order</i>. By order, I mean the sequential order of things: A to B to C.
-                    </p>
-                    <p>
-                        Order is rarely considered explicitly; in life, the 'correct' sequential order is often obvious: I put on my socks before my shoes, I select the washing cycle before I start the washing machine.
-                    </p>
-                    <p>
-                        As with any dimension of design, failing to consider order runs the risk of locking ourselves into sub-optimal design decisions: we reach local maxima.
-                    </p>
-                    <p>
-                        I place particular emphasis on order specifically because it is fundamental, and often assumed early on in the design process.
-                    </p>
-                    <h2>What about user-testing?</h2>
-                    <p>
-                        You're right. User-testing is real, and design dimensions aren't!
-                    </p>
-                    <p>
-                        Design dimensions are mere concepts which frame and describe reality, they're evolving constructs intended to make solving design problems easier. <br>
-                        It can therefore be said that design dimensions aren't inherently canonical - although some seem pretty close.
-                    </p>
-                    <p>
-                        This is why the ultimate in design practice is user-testing: if a user-test adequately reflects reality, then they are effectively applying every possible dimension of design at once - including those as yet undescribed!
-                    </p>
-                    <p>
-                        "Just user-test, then!" I hear you cry. Yes, that's the spirit. I'm sure we all think that every design team should be user-testing more. However, lets not forget that <i>user-testing doth not a designer make</i>.
-                    </p>
-                    <h2>The purpose of design dimensions</h2>
-                    <p>
-                        The case for utilising design dimensions is twofold: to avoid 'rediscovering fire', and to support the creative process.
-                    </p>
-                    <p>
-                        <i>05/09/2022 - To be continued</i>
-                    </p>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Conceptual dimensions that underpin design" />
+    <title>Design Dimensions</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Design Dimensions</h1>
+          <h2>Intro'</h2>
+          <p>
+            Broadly speaking, a designer's function is to take information about a design problem, garner some ideas, then assess and test them until a good ideas emerge.
+          </p>
+          <p>
+            Design dimensions - also known as laws, principles, perspectives and so on - are the many conceptual frameworks designers adopt when creating and assessing their ideas.
+          </p>
+          <p>
+            Below are some examples, note that some of these may have overlapping content, or be broader than others:
+          </p>
+          <ul>
+            <li>Usability</li>
+            <li>Trust</li>
+            <li>Appeal</li>
+            <li>Convention</li>
+            <li>Aesthetics</li>
+            <li>Signifiers</li>
+            <li>Physical context</li>
+          </ul>
+          <p>
+            These dimensions are important: someone unaware of these would find a design problem enigmatic. You could even argue that
+            <i>they are not a designer at all</i>.
+          </p>
+          <p>
+            If a design idea were a break-board, design dimensions are both the hands that set them up, and the many fists attempting to break them. Good ideas get broken very rarely.
+          </p>
+          <h2>An example: Order</h2>
+          <p>
+            One dimension of design I recently found myself considering was
+            <i>Order</i>. By order, I mean the sequential order of things: A to B to C.
+          </p>
+          <p>
+            Order is rarely considered explicitly; in life, the 'correct' sequential order is often obvious: I put on my socks before my shoes, I select the washing cycle before I start the washing machine.
+          </p>
+          <p>
+            As with any dimension of design, failing to consider order runs the risk of locking ourselves into sub-optimal design decisions: we reach local maxima.
+          </p>
+          <p>
+            I place particular emphasis on order specifically because it is fundamental, and often assumed early on in the design process.
+          </p>
+          <h2>What about user-testing?</h2>
+          <p>
+            You're right. User-testing is real, and design dimensions aren't!
+          </p>
+          <p>
+            Design dimensions are mere concepts which frame and describe reality, they're evolving constructs intended to make solving design problems easier. <br>
+            It can therefore be said that design dimensions aren't inherently canonical - although some seem pretty close.
+          </p>
+          <p>
+            This is why the ultimate in design practice is user-testing: if a user-test adequately reflects reality, then they are effectively applying every possible dimension of design at once - including those as yet undescribed!
+          </p>
+          <p>
+            "Just user-test, then!" I hear you cry. Yes, that's the spirit. I'm sure we all think that every design team should be user-testing more. However, lets not forget that
+            <i>user-testing doth not a designer make</i>.
+          </p>
+          <h2>The purpose of design dimensions</h2>
+          <p>
+            The case for utilising design dimensions is twofold: to avoid 'rediscovering fire', and to support the creative process.
+          </p>
+          <p>
+            <i>05/09/2022 - To be continued</i>
+          </p>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
