--- a/html/recipe-carbonara.html
+++ b/html/recipe-carbonara.html
@@ -2,91 +2,102 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="A recipe for making spaghetti carbonara"/>
-        <title>Spaghetti Carbonara Recipe</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Spaghetti Carbonara Recipe</h1>
-                    <p>
-                        This spaghetti <i>'alla'</i> Carbonara recipe requires very little of your time to prepare and cook, but you must pay close attention for the duration.
-                    </p>
-                    <p>
-                        Once sufficiently practiced, this meal becomes quite convenient thanks to the long shelf-life of its ingredients and short cooking time.
-                    </p>
-                    <h2>Overview</h2>
-                    <ul>
-                        <li>Serves: 2 people</li>
-                        <li>Time til ready: 13-15m<br>
-                            <i>(up to 25 mins with frozen Garlic Bread)</i></li>
-                        <li>Complexity: Medium <br>
-                            <i>(easy to mess up)</i></li>
-                        <li>Cost: Low</li>
-                    </ul>
-                    <h2>Ingredients</h2>
-                    <ul>
-                        <li>~150g Spaghetti pasta</li>
-                        <li>Two large eggs</li>
-                        <li>~50g Parmigiano cheese</li>
-                        <li>~100g Smoked bacon lardons*</li>
-                        <li>2-4 Garlic cloves</li>
-                        <li>Olive oil*</li>
-                        <li>Salt & Pepper</li>
-                        <li>Garlic bread <i>(optional)</i></li>
-                    </ul>
-                    <p>
-                        * You can substitute lardons with rashers. I use thin, smoked, streaky bacon, but you could use thick unsmoked rashers without issue.<br>
-                        It's your choice.
-                    </p>
-                    <h2>Method</h2>
-                    <p>
-                        0. Depending on the cook time of your garlic bread, you may wish to start baking it immediately.<br>
-                        Read on, and gauge your confidence to get everything ready in sync with the garlic bread.
-                    </p>
-                    <p>
-                        1. Add the spaghetti to a pan of boiling water with a pinch of salt. Set a timer for 8-9mins, and stir occasionally to prevent the pasta sticking together.
-                    </p>
-                    <p>
-                        2. Peel and finely chop/slice the garlic cloves then set aside.
-                    </p>
-                    <p>
-                        3. Finely grate all of the Parmigiano, then weigh 30g of it into a container suitable for egg-beating. The remaining 20g is for serving.
-                    </p>
-                    <p>
-                        4. Break the eggs - yolk and white - in with the 30g of Parmigiano and some ground pepper. Beat this mixture with a fork until thoroughly mixed.
-                    </p>
-                    <p>
-                        5. With about ~5-6 mins remaining on the timer, cook the bacon on a medium heat frying-pan til lightly golden. Ensure this frying-pan is big enough to hold all of the pasta, bacon, and cheese/egg mixture.
-                    </p>
-                    <p>
-                        6. With the bacon cooked and the timer (hopefully) still going, take the frying-pan off of the heat, remove the bacon, and add the garlic.<br>This is your opportunity to cut up the bacon into smaller pieces if you aren't using lardons.
-                    </p>
-                    <p>
-                        7. When the timer ends, ensure the pan is still well-oiled and quite hot, but not searing. Strain the pasta almost completely then add it to the frying-pan. Begin stirring and folding the pasta actively to soak it in oil, sizzling garlic, and bacon residue.
-                    </p>
-                    <p>
-                        8. Add the bacon & the egg-cheese mixture into the frying-pan with the pasta, taking care not to let the mixture begin to fry. You will be able tell when this is happening because the mixture will stick to the pan and let off a pungent omelette smell.
-                    </p>
-                    <p>
-                        9. Continue to stir and fold the mixture until well-heated through and of a desired consistency, the dish should be steaming hot.
-                    </p>
-                    <p>
-                        10. Serve with pepper and the remaining Parmigiano.
-                    </p>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="A recipe for making spaghetti carbonara" />
+    <title>Spaghetti Carbonara Recipe</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Spaghetti Carbonara Recipe</h1>
+          <p>
+            This spaghetti
+            <i>'alla'</i>
+            Carbonara recipe requires very little of your time to prepare and cook, but you must pay close attention for the duration.
+          </p>
+          <p>
+            Once sufficiently practiced, this meal becomes quite convenient thanks to the long shelf-life of its ingredients and short cooking time.
+          </p>
+          <h2>Overview</h2>
+          <ul>
+            <li>Serves: 2 people</li>
+            <li>Time til ready: 13-15m<br>
+              <i>(up to 25 mins with frozen Garlic Bread)</i>
+            </li>
+            <li>Complexity: Medium <br>
+              <i>(easy to mess up)</i>
+            </li>
+            <li>Cost: Low</li>
+          </ul>
+          <h2>Ingredients</h2>
+          <ul>
+            <li>~150g Spaghetti pasta</li>
+            <li>Two large eggs</li>
+            <li>~50g Parmigiano cheese</li>
+            <li>~100g Smoked bacon lardons*</li>
+            <li>2-4 Garlic cloves</li>
+            <li>Olive oil*</li>
+            <li>Salt & Pepper</li>
+            <li>Garlic bread
+              <i>(optional)</i>
+            </li>
+          </ul>
+          <p>
+            * You can substitute lardons with rashers. I use thin, smoked, streaky bacon, but you could use thick unsmoked rashers without issue.<br>
+            It's your choice.
+          </p>
+          <h2>Method</h2>
+          <p>
+            0. Depending on the cook time of your garlic bread, you may wish to start baking it immediately.<br>
+            Read on, and gauge your confidence to get everything ready in sync with the garlic bread.
+          </p>
+          <p>
+            1. Add the spaghetti to a pan of boiling water with a pinch of salt. Set a timer for 8-9mins, and stir occasionally to prevent the pasta sticking together.
+          </p>
+          <p>
+            2. Peel and finely chop/slice the garlic cloves then set aside.
+          </p>
+          <p>
+            3. Finely grate all of the Parmigiano, then weigh 30g of it into a container suitable for egg-beating. The remaining 20g is for serving.
+          </p>
+          <p>
+            4. Break the eggs - yolk and white - in with the 30g of Parmigiano and some ground pepper. Beat this mixture with a fork until thoroughly mixed.
+          </p>
+          <p>
+            5. With about ~5-6 mins remaining on the timer, cook the bacon on a medium heat frying-pan til lightly golden. Ensure this frying-pan is big enough to hold all of the pasta, bacon, and cheese/egg mixture.
+          </p>
+          <p>
+            6. With the bacon cooked and the timer (hopefully) still going, take the frying-pan off of the heat, remove the bacon, and add the garlic.<br>This is your opportunity to cut up the bacon into smaller pieces if you aren't using lardons.
+          </p>
+          <p>
+            7. When the timer ends, ensure the pan is still well-oiled and quite hot, but not searing. Strain the pasta almost completely then add it to the frying-pan. Begin stirring and folding the pasta actively to soak it in oil, sizzling garlic, and bacon residue.
+          </p>
+          <p>
+            8. Add the bacon & the egg-cheese mixture into the frying-pan with the pasta, taking care not to let the mixture begin to fry. You will be able tell when this is happening because the mixture will stick to the pan and let off a pungent omelette smell.
+          </p>
+          <p>
+            9. Continue to stir and fold the mixture until well-heated through and of a desired consistency, the dish should be steaming hot.
+          </p>
+          <p>
+            10. Serve with pepper and the remaining Parmigiano.
+          </p>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
