--- a/html/this_website.html
+++ b/html/this_website.html
@@ -2,69 +2,74 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="Why copy the government?"/>
-        <title>Projects: This Website</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>This Website</h1>
-                    <h2>Why take inspiration from the UK Government for website design?</h2>
-                    <p>
-                        The Government Digital Service (GDS) - along with all public-sector digital teams - are uniquely positioned in the world of interaction design:
-                    </p>
-                    <ul>
-                        <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
-                        <li>Usability and accessibility for end users are their Key Performance Indicators (KPIs), rather than an afterthought.</li>
-                        <li>Due to the many faceted functions of government, their work is multidisciplinary and therefore likely to have applicability in various contexts.</li>
-                        <li>They have a unique opportunity to spend time conducting design research, where the private sector may instead rush an artefact to production.</li>
-                    </ul>
-                    <p>
-                        *<i>One could argue that HMRC is 'profit-seeking'.</i>
-                    </p>
-                    <h2>Why for your personal site?</h2>
-                    <p>
-                        <i>Imitation is the highest form of flattery.</i>
-                    </p>
-                    <p>
-                        Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid research-backed foundation to build upon.
-                    </p>
-                    <p>
-                        From an design perspective, it is an opportunity to explore the design thinking and implementation details of highly usable website components.
-                    </p>
-                    <h2>There's something else...</h2>
-                    <p>
-                        Yes, there is. While purely coincidence, this site has similar motive and final appearance to the below satirical, minimalist websites:
-                    </p>
-                    <ul>
-                        <li><a href="http://motherfuckingwebsite.com/">Motherf***ing Website (external)</a></li>
-                        <li><a href="http://bettermotherfuckingwebsite.com/">Better Motherf***ing Website (external)</a></li>
-                        <li><a href="https://evenbettermotherfucking.website/">Even Better Motherf***ing Website (external)</a></li>
-                        <li><a href="https://thebestmotherfuckingwebsite.co/">The Best Motherf***ing Website (external)</a></li>
-                        <li><a href="https://perfectmotherfuckingwebsite.com/">Perfect Motherf***ing Website (external)</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="one-third-container">
-                <div class="related-content-block">
-                    <h2>Similar Content</h2>
-                    <ul>
-                        <li><a href="/html/buttons">HTML button styling</a></li>
-                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
-                    </ul>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Why copy the government?" />
+    <title>Projects: This Website</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>This Website</h1>
+          <h2>Why take inspiration from the UK Government for website design?</h2>
+          <p>
+            The Government Digital Service (GDS) - along with all public-sector digital teams - are uniquely positioned in the world of interaction design:
+          </p>
+          <ul>
+            <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
+            <li>Usability and accessibility for end users are their Key Performance Indicators (KPIs), rather than an afterthought.</li>
+            <li>Due to the many faceted functions of government, their work is multidisciplinary and therefore likely to have applicability in various contexts.</li>
+            <li>They have a unique opportunity to spend time conducting design research, where the private sector may instead rush an artefact to production.</li>
+          </ul>
+          <p>
+            *<i>One could argue that HMRC is 'profit-seeking'.</i>
+          </p>
+          <h2>Why for your personal site?</h2>
+          <p>
+            <i>Imitation is the highest form of flattery.</i>
+          </p>
+          <p>
+            Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid research-backed foundation to build upon.
+          </p>
+          <p>
+            From an design perspective, it is an opportunity to explore the design thinking and implementation details of highly usable website components.
+          </p>
+          <h2>There's something else...</h2>
+          <p>
+            Yes, there is. While purely coincidence, this site has similar motive and final appearance to the below satirical, minimalist websites:
+          </p>
+          <ul>
+            <li><a href="http://motherfuckingwebsite.com/">Motherf***ing Website (external)</a></li>
+            <li><a href="http://bettermotherfuckingwebsite.com/">Better Motherf***ing Website (external)</a></li>
+            <li><a href="https://evenbettermotherfucking.website/">Even Better Motherf***ing Website (external)</a></li>
+            <li><a href="https://thebestmotherfuckingwebsite.co/">The Best Motherf***ing Website (external)</a></li>
+            <li><a href="https://perfectmotherfuckingwebsite.com/">Perfect Motherf***ing Website (external)</a></li>
+          </ul>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+      <div class="one-third-container">
+        <div class="related-content-block">
+          <h2>Similar Content</h2>
+          <ul>
+            <li><a href="/html/buttons">HTML button styling</a></li>
+            <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
