--- a/html/buttons.html
+++ b/html/buttons.html
@@ -2,35 +2,41 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="stylesheet" href="../css/buttons.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="A library of CSS buttons"/>
-        <title>Elliott's Button Library</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>A Button Library</h1>
-                    <h2>1. Square, Depressible</h2>
-                    <p>
-                        I first saw this minimalist button on <a href="https://www.gov.uk/">gov.uk</a>, finding its skeuomorphic downward 'movement' quite satisfying.
-                    </p>
-                    <div class="button-container">
-                        <button class="lib-button" id="button-one">Click Me</button>
-                    </div>
-                    <p>
-                        This effect is achieved as follows:
-                    </p>
-                    <pre><code>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/buttons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="A library of CSS buttons" />
+    <title>Elliott's Button Library</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>A Button Library</h1>
+          <h2>1. Square, Depressible</h2>
+          <p>
+            I first saw this minimalist button on
+            <a href="https://www.gov.uk/">gov.uk</a>, finding its skeuomorphic downward 'movement' quite satisfying.
+          </p>
+          <div class="button-container">
+            <button class="lib-button" id="button-one">Click Me</button>
+          </div>
+          <p>
+            This effect is achieved as follows:
+          </p>
+          <pre><code>
 #button-one {
     border: solid black 1px;
     border-bottom: 6px black solid;
@@ -41,36 +47,45 @@
     transform: translateY(2px);
 }
                     </code></pre>
-                    <p>
-                        Take care when changing live border values such as with <code>:hover</code> or <code>:active</code>, as this can bump neighbouring block elements around.
-                    </p>
-                    <h2>2. Square, Pop-up on Hover, Depressible</h2>
-                    <p>
-                        This adaptation of button distinguishes a hovered button from its neighbours by breaking their shared boundary (it sticks out).
-                    </p>
-                    <p>
-                        Such behaviour forms a user expectation for all 'normal' buttons in a group to pop-up. We can negate this behaviour to help signify disabled buttons:
-                    </p>
-                    <div class="button-container">
-                        <button class="lib-button" id="button-two">Click Me</button>
-                        <button class="lib-button" id="button-two">Click Me</button>
-                        <button class="lib-button" id="button-two" disabled>Click Me</button>
-                    </div>
-                    <p>
-                        While the pop-up behaviour is satisfying for desktop mouse-users, mobile and keyboard-only users inability to hover means they wont encounter value here.
-                    </p>
-                    <p>
-                        Combining the pop-up and disabled pop-up behaviour with colour coding leads to a less jarring result:
-                    </p>
-                    <div class="button-container">
-                        <button class="lib-button" id="button-two">Click Me</button>
-                        <button class="lib-button" id="button-two" disabled>Click Me</button>
-                        <button class="lib-button" id="button-two">Click Me</button>
-                    </div>
-                    <p>
-                        This is achieved as follows:
-                    </p>
-                    <pre><code>
+          <p>
+            Take care when changing live border values such as with
+            <code>:hover</code>
+            or
+            <code>:active</code>, as this can bump neighbouring block elements around.
+          </p>
+          <h2>2. Square, Pop-up on Hover, Depressible</h2>
+          <p>
+            This adaptation of button distinguishes a hovered button from its neighbours by breaking their shared boundary (it sticks out).
+          </p>
+          <p>
+            Such behaviour forms a user expectation for all 'normal' buttons in a group to pop-up. We can negate this behaviour to help signify disabled buttons:
+          </p>
+          <div class="button-container">
+            <button class="lib-button" id="button-two">Click Me</button>
+            <button class="lib-button" id="button-two">Click Me</button>
+            <button
+              class="lib-button"
+              id="button-two"
+              disabled>Click Me</button>
+          </div>
+          <p>
+            While the pop-up behaviour is satisfying for desktop mouse-users, mobile and keyboard-only users inability to hover means they wont encounter value here.
+          </p>
+          <p>
+            Combining the pop-up and disabled pop-up behaviour with colour coding leads to a less jarring result:
+          </p>
+          <div class="button-container">
+            <button class="lib-button" id="button-two">Click Me</button>
+            <button
+              class="lib-button"
+              id="button-two"
+              disabled>Click Me</button>
+            <button class="lib-button" id="button-two">Click Me</button>
+          </div>
+          <p>
+            This is achieved as follows:
+          </p>
+          <pre><code>
 #button-two {
     border: solid black 1px;
     border-bottom: 2px black solid;
@@ -93,17 +108,17 @@
     transform: translateY(0px);
 }
                     </code></pre>
-                </div>
-            </div>
-            <div class="one-third-container">
-                <div class="related-content-block">
-                    <h2>Similar Content</h2>
-                    <ul>
-                        <li><a href="/html/this_website">Designing this website</a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+      <div class="one-third-container">
+        <div class="related-content-block">
+          <h2>Similar Content</h2>
+          <ul>
+            <li><a href="/html/this_website">Designing this website</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
