--- a/html/cv.html
+++ b/html/cv.html
@@ -2,130 +2,178 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
 
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 
-        <meta name="description" content="Elliott H.'s CV"/>
-        <title>Elliott H.</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Curriculum Vitae</h1>
-                    <h2>Personal summary</h2>
-                    <p>
-                        A computer scientist working as a User Experience (UX) designer.<br>
-                        Currently working on ChildFirst: a Case Management System (CMS) which supports 1,600 social workers to represent 140,000 children per year in the family court.
-                    </p>
-                    <h2>Employment history</h2>
-                    <p>
-                        <strong>2 Years of Experience</strong>
-                        <br>
-                        <br>
-                        Sectors:
-                        <p><strong>&nbsp;&nbsp;&nbsp;Social work</strong></p>
-                        <p><strong>&nbsp;&nbsp;&nbsp;Manufacturing</strong></p>
-                        <p><strong>&nbsp;&nbsp;&nbsp;Research</strong></p>
-                        <br>
-                    </p>
-                    <h3><span class="material-symbols-outlined" aria-hidden="true">design_services</span>UX Designer (Current role)</h3>
-                    <p>&emsp;
-                        <i>
-                            <a target="_blank" href="https://www.gov.uk/government/organisations/children-and-family-court-advisory-and-support-service">
-                                Children and Family Court Advisory and Support Service (Cafcass) <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
-                            </a>
-                        </i>
-                    </p>
-                    <ul>
-                        <li><strong>Designing from end-to-end</strong> - Working with users, stakeholders, and a third-party development team to ensure discovery, design, and development of solutions to users' requirements.</li>
-                        <li><strong>Prototyping with Figma</strong> - Using components and icons from Google's Material design system to create prototypes for usability testing.</li>
-                        <li><strong>Improving findability</strong> - Working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
-                        <li><strong>Evangelizing for UX</strong> - Ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
-                        <li><strong>Conducting business analysis</strong> - Working between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
-                    </ul>
-                    <br>
+    <meta name="description" content="Elliott H.'s CV" />
+    <title>Elliott H.</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Curriculum Vitae</h1>
+          <h2>Personal summary</h2>
+          <p>
+            A computer scientist working as a User Experience (UX) designer.<br>
+            Currently working on ChildFirst: a Case Management System (CMS) which supports 1,600 social workers to represent 140,000 children per year in the family court.
+          </p>
+          <h2>Employment history</h2>
+          <p>
+            <strong>2 Years of Experience</strong>
+            <br>
+            <br>
+            Sectors:
+            <p>
+              <strong>&nbsp;&nbsp;&nbsp;Social work</strong>
+            </p>
+            <p>
+              <strong>&nbsp;&nbsp;&nbsp;Manufacturing</strong>
+            </p>
+            <p>
+              <strong>&nbsp;&nbsp;&nbsp;Research</strong>
+            </p>
+            <br>
+          </p>
+          <h3>
+            <span class="material-symbols-outlined" aria-hidden="true">design_services</span>UX Designer (Current role)</h3>
+          <p>&emsp;
+            <i>
+              <a target="_blank" href="https://www.gov.uk/government/organisations/children-and-family-court-advisory-and-support-service">
+                Children and Family Court Advisory and Support Service (Cafcass)
+                <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+              </a>
+            </i>
+          </p>
+          <ul>
+            <li>
+              <strong>Designing from end-to-end</strong>
+              - Working with users, stakeholders, and a third-party development team to ensure discovery, design, and development of solutions to users' requirements.</li>
+            <li>
+              <strong>Prototyping with Figma</strong>
+              - Using components and icons from Google's Material design system to create prototypes for usability testing.</li>
+            <li>
+              <strong>Improving findability</strong>
+              - Working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
+            <li>
+              <strong>Evangelizing for UX</strong>
+              - Ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
+            <li>
+              <strong>Conducting business analysis</strong>
+              - Working between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
+          </ul>
+          <br>
 
-                    <h3><span class="material-symbols-outlined" aria-hidden="true">terminal</span>IT Officer / Junior Software Developer</h3>
-                    <p>&emsp;
-                        <i>
-                            UK-based moulded packaging manufacturer
-                        </i>
-                    </p>
-                    <ul>
-                        <li><strong>Designed and developed apps</strong> - Created a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
-                        <li><strong>Procured and deployed automation</strong> - Set up Zebra brand label-printers to enable future automation, quality control tracing, and production reporting.</li>
-                        <li><strong>Digitized paper processes</strong> - Designed a database for a product information system that would formalise paper, .docx, and .xlsx formatted product information and processes.<br></li>
-                        <li><strong>Researched optimal resource allocation</strong> - Studied linear programming techniques for allocating finite production resource and staff by proficiency over time.</li>
-                        <li><strong>Procured a stock control system</strong> - Replacing manual-input of .xlsx formatted stock control would reduce delivery failure.</li>
-                        <li><strong>Advocated for Health and Safety (H&S)</strong> - Promoted better working conditions for factory workers in line with Health and Safety Executive (HSE) guidelines.</li>
-                    </ul>
-                    <br>
+          <h3>
+            <span class="material-symbols-outlined" aria-hidden="true">terminal</span>IT Officer / Junior Software Developer</h3>
+          <p>&emsp;
+            <i>
+              UK-based moulded packaging manufacturer
+            </i>
+          </p>
+          <ul>
+            <li>
+              <strong>Designed and developed apps</strong>
+              - Created a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
+            <li>
+              <strong>Procured and deployed automation</strong>
+              - Set up Zebra brand label-printers to enable future automation, quality control tracing, and production reporting.</li>
+            <li>
+              <strong>Digitized paper processes</strong>
+              - Designed a database for a product information system that would formalise paper, .docx, and .xlsx formatted product information and processes.<br></li>
+            <li>
+              <strong>Researched optimal resource allocation</strong>
+              - Studied linear programming techniques for allocating finite production resource and staff by proficiency over time.</li>
+            <li>
+              <strong>Procured a stock control system</strong>
+              - Replacing manual-input of .xlsx formatted stock control would reduce delivery failure.</li>
+            <li>
+              <strong>Advocated for Health and Safety (H&S)</strong>
+              - Promoted better working conditions for factory workers in line with Health and Safety Executive (HSE) guidelines.</li>
+          </ul>
+          <br>
 
-                    <h3><span class="material-symbols-outlined" aria-hidden="true">biotech</span>Co-Founder, Generalist</h3>
-                    <p>&emsp;
-                        <i>
-                            <a target="_blank" href="https://dreamingspires.dev/">
-                                Dreaming Spires <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
-                            </a>
-                        </i>
-                    </p>
-                    <ul>
-                        <li><strong>Project managed software development</strong> - Delivered several paid Research Software Engineering (RSE) projects for research institutions.</li>
-                        <li><strong>Applied design methodologies</strong> - Conducted thorough requirements capture, user interviews, and interface design work where needed.</li>
-                        <li><strong>Spoke publicly about UX</strong> - Delivered an online UX presentation and workshop at an RSE event held by the Alan Turing Institute.</li>
-                        <li><strong>Account managed for collaborators</strong> - Prepared contracts and managed accounts for teams in need of our services.</li>
-                        <li><strong>Collaborated with leading institutions</strong> - Worked with research organisations including: University of Cambridge, University of Oxford, Max Planck Institute Berlin, and Harvard Department of Anthropology.</li>
-                    </ul>
-                    <br>
+          <h3>
+            <span class="material-symbols-outlined" aria-hidden="true">biotech</span>Co-Founder, Generalist</h3>
+          <p>&emsp;
+            <i>
+              <a target="_blank" href="https://dreamingspires.dev/">
+                Dreaming Spires
+                <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+              </a>
+            </i>
+          </p>
+          <ul>
+            <li>
+              <strong>Project managed software development</strong>
+              - Delivered several paid Research Software Engineering (RSE) projects for research institutions.</li>
+            <li>
+              <strong>Applied design methodologies</strong>
+              - Conducted thorough requirements capture, user interviews, and interface design work where needed.</li>
+            <li>
+              <strong>Spoke publicly about UX</strong>
+              - Delivered an online UX presentation and workshop at an RSE event held by the Alan Turing Institute.</li>
+            <li>
+              <strong>Account managed for collaborators</strong>
+              - Prepared contracts and managed accounts for teams in need of our services.</li>
+            <li>
+              <strong>Collaborated with leading institutions</strong>
+              - Worked with research organisations including: University of Cambridge, University of Oxford, Max Planck Institute Berlin, and Harvard Department of Anthropology.</li>
+          </ul>
+          <br>
 
-                </div>
-            </div>
-            <div class="one-third-container">
-                <div class="related-content-block">
-                    <h3>Soft skills</h3>
-                    <p>User Interface (UI) design</p>
-                    <p>Usability testing</p>
-                    <p>Business analysis</p>
-                    <p>Database design</p>
-                    <p>Software development</p>
-                    <p>Open-source projects</p>
-
-                    <h3>Technical skills</h3>
-                    <p>Figma</p>
-                    <p>Miro</p>
-                    <p>HTML / CSS3</p>
-                    <p>Azure DevOps</p>
-                    <p>SQL</p>
-                    <p>Microsoft 365</p>
-
-                    <h3>Domains of interest</h3>
-                    <p>Aviation</p>
-                    <p>Manufacturing</p>
-                    <p>Psychology</p>
-                    <p>Medicine</p>
-                    <p>Audio</p>
-                    <p>Finance and investing</p>
-                    <p>Science, Technology, Engineering and Maths (STEM)</p>
-                    <br>
-                    <hr>
-                    <h3>Related links</h3>
-                    <ul>
-                        <li><a href="/html/contact">Contact Elliott</a></li>
-                        <li><a href="/html/projects">View Elliott's projects</a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+      <div class="one-third-container">
+        <div class="related-content-block">
+          <h3>Soft skills</h3>
+          <p>User Interface (UI) design</p>
+          <p>Usability testing</p>
+          <p>Business analysis</p>
+          <p>Database design</p>
+          <p>Software development</p>
+          <p>Open-source projects</p>
+
+          <h3>Technical skills</h3>
+          <p>Figma</p>
+          <p>Miro</p>
+          <p>HTML / CSS3</p>
+          <p>Azure DevOps</p>
+          <p>SQL</p>
+          <p>Microsoft 365</p>
+
+          <h3>Domains of interest</h3>
+          <p>Aviation</p>
+          <p>Manufacturing</p>
+          <p>Psychology</p>
+          <p>Medicine</p>
+          <p>Audio</p>
+          <p>Finance and investing</p>
+          <p>Science, Technology, Engineering and Maths (STEM)</p>
+          <br>
+          <hr>
+          <h3>Related links</h3>
+          <ul>
+            <li><a href="/html/contact">Contact Elliott</a></li>
+            <li><a href="/html/projects">View Elliott's projects</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
