--- a/html/index.html
+++ b/html/index.html
@@ -2,54 +2,60 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.png"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="Elliott H.'s personal website"/>
-        <title>Elliott H.</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>Home</h1>
-                    <h2>Elliott is a User Experience Designer.</h2>
-                    <p>He has a passion for usability and accessibility.</p>
-                    <h3>Look familiar?</h3>
-                    <p>
-                        This site is loosely based on the UK Government Digital Service's (GDS) <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a>.
-                    </p>
-                </div>
-            </div>
-            <div class="one-third-container">
-                <div class="related-content-block">
-                    <h2>Useful links</h2>
-                    <ul>
-                        <li><a href="/html/cv">View Curriculum Vitae (CV)</a></li>
-                        <li><a href="/html/contact">Contact Elliott</a></li>
-                        <li><a href="/html/projects">View Elliott's projects</a></li>
-                    </ul>
-                </div>
-                <div class="related-content-block">
-                    <h2>Other pages</h2>
-                    <ul>
-                        <li><a href="/html/design-dimensions">On design dimensions</a></li>
-                        <li><a href="/html/buttons">HTML button styling</a></li>
-                        <li><a href="/html/this_website">Designing this website</a></li>
-                        <li><a href="/html/recipe-carbonara">A Carbonara recipe</a></li>
-                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
-                        <li><a href="/html/audiophile">My audio interests</a></li>
-                        <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
-                    </ul>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Elliott H.'s personal website" />
+    <title>Elliott H.</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>Home</h1>
+          <h2>Elliott is a User Experience Designer.</h2>
+          <p>He has a passion for usability and accessibility.</p>
+          <h3>Look familiar?</h3>
+          <p>
+            This site is loosely based on the UK Government Digital Service's (GDS)
+            <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a>.
+          </p>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+      <div class="one-third-container">
+        <div class="related-content-block">
+          <h2>Useful links</h2>
+          <ul>
+            <li><a href="/html/cv">View Curriculum Vitae (CV)</a></li>
+            <li><a href="/html/contact">Contact Elliott</a></li>
+            <li><a href="/html/projects">View Elliott's projects</a></li>
+          </ul>
+        </div>
+        <div class="related-content-block">
+          <h2>Other pages</h2>
+          <ul>
+            <li><a href="/html/design-dimensions">On design dimensions</a></li>
+            <li><a href="/html/buttons">HTML button styling</a></li>
+            <li><a href="/html/this_website">Designing this website</a></li>
+            <li><a href="/html/recipe-carbonara">A Carbonara recipe</a></li>
+            <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
+            <li><a href="/html/audiophile">Audio interests</a></li>
+            <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
