--- a/html/reaction.html
+++ b/html/reaction.html
@@ -2,33 +2,38 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../res/icon.ico"/>
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <meta name="description" content="A collection of reaction images"/>
-        <title>Reaction Images</title>
-    </head>
-    <body>
-        {% include navigation.html %}
-        <div class="content">
-            <div class="two-thirds-container">
-                <div class="text-content-block">
-                    <h1>They Say a Picture is Worth a Thousand Words...</h1>
-                    <div id="image-roll">
-                    {% assign image_files = site.static_files | where: "image", true %}
-                    {% for myimage in image_files %}
-                        <img src="{{ site.baseurl }}{{ myimage.path }}" alt="reaction image"/>
-                    {% endfor %}
-                    </div>
-                </div>
-            </div>
+  <head>
+    {% include gtm_top.html %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../res/icon.ico" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="A collection of reaction images" />
+    <title>Reaction Images</title>
+  </head>
+  <body>
+    {% include gtm_bottom.html %}
+    {% include navigation.html %}
+    <div class="content">
+      <div class="two-thirds-container">
+        <div class="text-content-block">
+          <h1>They Say a Picture is Worth a Thousand Words...</h1>
+          <div id="image-roll">
+            {% assign image_files = site.static_files | where: "image", true %}
+            {% for myimage in image_files %}
+              <img src="{{ site.baseurl }}{{ myimage.path }}" alt="reaction image" />
+            {% endfor %}
+          </div>
         </div>
-        {% include footer.html %}
-    </body>
+      </div>
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
